--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8"/>
-        <title> UAB/Enginyeria </title>
+        <!-- completa -->
     </head>
     <body>
         <!-- SECCIÓ 1 - Capçalera -->
         <header>
-            <!-- Test complete -->
+            <!-- completa -->
         </header>
         <!-- SECCIÓ 2 - Llistat dels diferents graus que ofereix l’escola d’enginyeria -->
         <section>
@@ -35,12 +34,12 @@
                 <h3>Estadístiques de matriculació per graus</h3>
             </header>
             <table border="1">
-                <!-- completa table -->
+                <!-- completa -->
             </table>
         </section>
         <!-- SECCIÓ 5 - Peu de pàgina -->
         <footer>
-            <!-- completa FOOTER -->
+            <!-- completa -->
         </footer>
     </body>
 </html>
