--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
                         Password: <input type="password" name="clau" /><br />
                         Grau:
                         <select name="grau"> <!-- completa -->
-                            <option value="I">Enginyeria Informàtica</option>
-                            <option value="T">Enginyeria de Sistemes de Telecomunicació</option>
-                            <option value="E">Enginyeria Electrònica de Telecomunicació</option>
-                            <option value="Q">Enginyeria Química</option>
+                            <option value="1">Enginyeria Informàtica</option>
+                            <option value="2">Enginyeria de Sistemes de Telecomunicació</option>
+                            <option value="3">Enginyeria Electrònica de Telecomunicació</option>
+                            <option value="4">Enginyeria Química</option>
                         </select>
                         <p>Tria la menció que t'atreu més:<p>
                         <select name="mencio"> <!-- completa -->
-                            <option value="S">Enginyeria del software</option>
-                            <option value="A">Enginyeria de computadors</option>
-                            <option value="C">Computació</option>
-                            <option value="I">Tecnologies de la informació</option>
+                            <option value="1">Enginyeria del software</option>
+                            <option value="2">Enginyeria de computadors</option>
+                            <option value="3">Computació</option>
+                            <option value="4">Tecnologies de la informació</option>
                         </select>
                         <br /><br />
                         <input type="submit" value="Registrar-me" />
